force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <label>Service Request</label>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>