force-app/main/default/objects/Service_Request__c/fields/AccountingMonth__c.field-meta.xml
<CustomField>
    <fullName>AccountingMonth__c</fullName>
    <label>Accounting Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>