force-app/main/default/objects/Service_Request__c/fields/Authorized_No__c.field-meta.xml
<CustomField>
    <fullName>Authorized_No__c</fullName>
    <label>Authorized No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>