force-app/main/default/objects/Service_Request__c/fields/Campaign_No__c.field-meta.xml
<CustomField>
    <fullName>Campaign_No__c</fullName>
    <label>Campaign No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>