force-app/main/default/objects/Service_Request__c/fields/Category_del__c.field-meta.xml
<CustomField>
    <fullName>Category_del__c</fullName>
    <formula>TEXT(Order__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>