force-app/main/default/objects/Service_Request__c/fields/ClaimAdujudicationMessage__c.field-meta.xml
<CustomField>
    <fullName>ClaimAdujudicationMessage__c</fullName>
    <label>Claim Adujudication Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>