force-app/main/default/objects/Service_Request__c/fields/ClaimDeniedComment__c.field-meta.xml
<CustomField>
    <fullName>ClaimDeniedComment__c</fullName>
    <label>Claim Denied Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>