force-app/main/default/objects/Service_Request__c/fields/ClaimModifyComment__c.field-meta.xml
<CustomField>
    <fullName>ClaimModifyComment__c</fullName>
    <label>Claim Modify Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>