force-app/main/default/objects/Service_Request__c/fields/ClaimStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ClaimStatusCode__c</fullName>
    <label>Claim Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>