force-app/main/default/objects/Service_Request__c/fields/CouponAdujudicationMessage__c.field-meta.xml
<CustomField>
    <fullName>CouponAdujudicationMessage__c</fullName>
    <label>CouponAdujudicationMessage</label>
    <type>TextArea</type>
</CustomField>