force-app/main/default/objects/Service_Request__c/fields/CouponApplicationNo__c.field-meta.xml
<CustomField>
    <fullName>CouponApplicationNo__c</fullName>
    <label>Coupon Application No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>