force-app/main/default/objects/Service_Request__c/fields/CouponLevel__c.field-meta.xml
<CustomField>
    <fullName>CouponLevel__c</fullName>
    <label>Coupon Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>