force-app/main/default/objects/Service_Request__c/fields/CouponServiceDate__c.field-meta.xml
<CustomField>
    <fullName>CouponServiceDate__c</fullName>
    <label>Coupon Service Date</label>
    <type>Date</type>
</CustomField>