force-app/main/default/objects/Service_Request__c/fields/CouponStatusCode__c.field-meta.xml
<CustomField>
    <fullName>CouponStatusCode__c</fullName>
    <label>Coupon Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>