force-app/main/default/objects/Service_Request__c/fields/CouponStatusName__c.field-meta.xml
<CustomField>
    <fullName>CouponStatusName__c</fullName>
    <label>Coupon Status Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>