force-app/main/default/objects/Service_Request__c/fields/Dealer_Description__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Description__c</fullName>
    <label>Dealer Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>