force-app/main/default/objects/Service_Request__c/fields/DealerCode__c.field-meta.xml
<CustomField>
    <fullName>DealerCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests (Dealer Code)</relationshipLabel>
    <relationshipName>Service_Requests_Dealer</relationshipName>
    <type>Lookup</type>
</CustomField>