force-app/main/default/objects/Service_Request__c/fields/DropDueDate__c.field-meta.xml
<CustomField>
    <fullName>DropDueDate__c</fullName>
    <label>Drop Due Date</label>
    <type>Date</type>
</CustomField>