force-app/main/default/objects/Service_Request__c/fields/Factory_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Factory_Receipt_Date__c</fullName>
    <label>Factory Receipt Date</label>
    <type>Date</type>
</CustomField>