force-app/main/default/objects/Service_Request__c/fields/Factory_Receipt_No__c.field-meta.xml
<CustomField>
    <fullName>Factory_Receipt_No__c</fullName>
    <label>Factory Receipt No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>