force-app/main/default/objects/Service_Request__c/fields/FailureDate__c.field-meta.xml
<CustomField>
    <fullName>FailureDate__c</fullName>
    <label>Failure Date</label>
    <type>Date</type>
</CustomField>