force-app/main/default/objects/Service_Request__c/fields/Frame_No__c.field-meta.xml
<CustomField>
    <fullName>Frame_No__c</fullName>
    <label>Frame No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>