force-app/main/default/objects/Service_Request__c/fields/Main_Damage_Parts__c.field-meta.xml
<CustomField>
    <fullName>Main_Damage_Parts__c</fullName>
    <label>Main Damage Parts</label>
    <length>100</length>
    <type>Text</type>
</CustomField>