force-app/main/default/objects/Service_Request__c/fields/Mechanic__c.field-meta.xml
<CustomField>
    <fullName>Mechanic__c</fullName>
    <label>Mechanic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>