force-app/main/default/objects/Service_Request__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Order.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Free_Coupon</value>
        </filterItems>
        <filterItems>
            <field>Order.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Warranty</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>