force-app/main/default/objects/Service_Request__c/fields/Payment_Part_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Part_Total_Amount__c</fullName>
    <label>Payment Part Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>