force-app/main/default/objects/Service_Request__c/fields/Point__c.field-meta.xml
<CustomField>
    <fullName>Point__c</fullName>
    <label>Point</label>
    <length>100</length>
    <type>Text</type>
</CustomField>