force-app/main/default/objects/Service_Request__c/fields/PointCode__c.field-meta.xml
<CustomField>
    <fullName>PointCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>DO/DLR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>