force-app/main/default/objects/Service_Request__c/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>