force-app/main/default/objects/Service_Request__c/fields/PrimaryFailedPartNo__c.field-meta.xml
<CustomField>
    <fullName>PrimaryFailedPartNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Failed PartNo</label>
    <referenceTo>Job_Part_Detail__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>