force-app/main/default/objects/Service_Request__c/fields/Problem_Comment__c.field-meta.xml
<CustomField>
    <fullName>Problem_Comment__c</fullName>
    <label>Problem Comment</label>
    <type>TextArea</type>
</CustomField>