force-app/main/default/objects/Service_Request__c/fields/Problem_Date__c.field-meta.xml
<CustomField>
    <fullName>Problem_Date__c</fullName>
    <label>Problem Date</label>
    <type>Date</type>
</CustomField>