force-app/main/default/objects/Service_Request__c/fields/Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reason_Comment__c</fullName>
    <label>Reason Comment</label>
    <type>TextArea</type>
</CustomField>