force-app/main/default/objects/Service_Request__c/fields/Reception__c.field-meta.xml
<CustomField>
    <fullName>Reception__c</fullName>
    <label>Reception</label>
    <length>100</length>
    <type>Text</type>
</CustomField>