force-app/main/default/objects/Service_Request__c/fields/Repair_Comment__c.field-meta.xml
<CustomField>
    <fullName>Repair_Comment__c</fullName>
    <label>Repair Comment</label>
    <type>TextArea</type>
</CustomField>