force-app/main/default/objects/Service_Request__c/fields/RepairCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>RepairCompletionDate__c</fullName>
    <label>Repair Completion Date</label>
    <type>Date</type>
</CustomField>