force-app/main/default/objects/Service_Request__c/fields/Request_Content__c.field-meta.xml
<CustomField>
    <fullName>Request_Content__c</fullName>
    <label>Request Content</label>
    <type>TextArea</type>
</CustomField>