force-app/main/default/objects/Service_Request__c/fields/Request_No__c.field-meta.xml
<CustomField>
    <fullName>Request_No__c</fullName>
    <label>Request No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>