force-app/main/default/objects/Service_Request__c/fields/Service_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_No__c</fullName>
    <formula>Order__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Order No.</label>
    <type>Text</type>
</CustomField>