force-app/main/default/objects/Service_Request__c/fields/Shop_Comment__c.field-meta.xml
<CustomField>
    <fullName>Shop_Comment__c</fullName>
    <label>Shop Comment</label>
    <type>TextArea</type>
</CustomField>