force-app/main/default/objects/Service_Request__c/fields/Symptom__c.field-meta.xml
<CustomField>
    <fullName>Symptom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Symptom</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Symptom_Condition__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Symptom</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Symptom_Condition__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>