force-app/main/default/objects/Service_Request__c/fields/YnspireReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>YnspireReceiptDate__c</fullName>
    <label>YnspireReceiptDate</label>
    <type>Date</type>
</CustomField>