force-app/main/default/objects/Service_Request__c/fields/YnspireReceiptNo__c.field-meta.xml
<CustomField>
    <fullName>YnspireReceiptNo__c</fullName>
    <label>YnspireReceiptNo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>