force-app/main/default/objects/Service_Request__c/recordTypes/Service_Request_Free_Coupon.recordType-meta.xml
<RecordType>
    <fullName>Service_Request_Free_Coupon</fullName>
    <active>true</active>
    <label>Service Request Free Coupon</label>
</RecordType>