force-app/main/default/objects/Service_Request__c/recordTypes/Service_Request_Warranty.recordType-meta.xml
<RecordType>
    <fullName>Service_Request_Warranty</fullName>
    <active>true</active>
    <label>Service Request Warranty</label>
</RecordType>